--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.9",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.525.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
@@ -41,6 +43,7 @@
     "qrcode.react": "^4.2.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-i18next": "^16.5.4",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
