--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.8.2",
     "@stripe/stripe-js": "^7.9.0",
+    "@types/leaflet": "^1.9.21",
     "@types/qrcode": "^1.5.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -35,6 +36,7 @@
     "framer-motion": "^12.23.9",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
@@ -44,6 +46,7 @@
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-i18next": "^16.5.4",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
